WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276348
nw_resolver object is getting leaked in DNSResolveQueueCFNet::performDNSLookup()
https://bugs.webkit.org/show_bug.cgi?id=276348
Summary
nw_resolver object is getting leaked in DNSResolveQueueCFNet::performDNSLookup()
Chris Dumez
Reported
2024-07-08 20:17:20 PDT
nw_resolver object is getting leaked in DNSResolveQueueCFNet::performDNSLookup().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-07-08 20:17:31 PDT
<
rdar://129599341
>
Chris Dumez
Comment 2
2024-07-08 20:22:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30592
EWS
Comment 3
2024-07-09 07:55:32 PDT
Committed
280775@main
(dc84c8313fa7): <
https://commits.webkit.org/280775@main
> Reviewed commits have been landed. Closing PR #30592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug