nw_resolver object is getting leaked in DNSResolveQueueCFNet::performDNSLookup() https://bugs.webkit.org/show_bug.cgi?id=276348 rdar://129599341

Reviewed by Ben Nham.

In performDNSLookup(), we call `nw_resolver_set_update_handler()` and pass it the nw_resolver.
This call will retain the nw_resolver until `nw_resolver_cancel()` is called on the resolver.
However, we were never calling `nw_resolver_cancel()` and the resolver was thus leaking.

* Source/WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp:
(WebCore::DNSResolveQueueCFNet::performDNSLookup):

Canonical link: https://commits.webkit.org/280775@main